--- a/app/printers.html
+++ b/app/printers.html
@@ -41,7 +41,7 @@
                 <span class="menu__icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse multi-collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto ml-auto">
                     <li class="nav-item dropdown menu__item">
                         <a class="nav-link menu__link" href="about.html" id="navbarDropdown1" role="button"
@@ -97,7 +97,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Дорожная карта развития Аддитивных технологий в Российской Федерации</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Виртуальный
                             3D - принтер</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Карточка, что бы продемонстрировать
                             отступ между блоками</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Карточка, что бы продемонстрировать
                             отступ между блоками</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -229,7 +229,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"></div>
                     </h2>
                 </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div id="collapseOne" class="collapse multi-collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -275,7 +275,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo"></div>
                     </h2>
                 </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div id="collapseTwo" class="collapse multi-collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -321,7 +321,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree"></div>
                     </h2>
                 </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div id="collapseThree" class="collapse multi-collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -342,7 +342,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseFourth" aria-expanded="true" aria-controls="collapseFourth"></div>
                     </h2>
                 </div>
-                <div id="collapseFourth" class="collapse" aria-labelledby="headingFourth" data-parent="#accordionExample">
+                <div id="collapseFourth" class="collapse multi-collapse" aria-labelledby="headingFourth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -366,7 +366,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseFifth" aria-expanded="true" aria-controls="collapseFifth"></div>
                     </h2>
                 </div>
-                <div id="collapseFifth" class="collapse" aria-labelledby="headingFifth" data-parent="#accordionExample">
+                <div id="collapseFifth" class="collapse multi-collapse" aria-labelledby="headingFifth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -388,7 +388,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseSixth" aria-expanded="true" aria-controls="collapseSixth"></div>
                     </h2>
                 </div>
-                <div id="collapseSixth" class="collapse" aria-labelledby="headingSixth" data-parent="#accordionExample">
+                <div id="collapseSixth" class="collapse multi-collapse" aria-labelledby="headingSixth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -409,7 +409,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseSeventh" aria-expanded="true" aria-controls="collapseSeventh"></div>
                     </h2>
                 </div>
-                <div id="collapseSeventh" class="collapse" aria-labelledby="headingSeventh" data-parent="#accordionExample">
+                <div id="collapseSeventh" class="collapse multi-collapse" aria-labelledby="headingSeventh" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -440,7 +440,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseEighth" aria-expanded="true" aria-controls="collapseEighth"></div>
                     </h2>
                 </div>
-                <div id="collapseEighth" class="collapse" aria-labelledby="headingEighth" data-parent="#accordionExample">
+                <div id="collapseEighth" class="collapse multi-collapse" aria-labelledby="headingEighth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -558,7 +558,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"></div>
                     </h2>
                 </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div id="collapseOne" class="collapse multi-collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -604,7 +604,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo"></div>
                     </h2>
                 </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div id="collapseTwo" class="collapse multi-collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -650,7 +650,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree"></div>
                     </h2>
                 </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div id="collapseThree" class="collapse multi-collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -671,7 +671,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseFourth" aria-expanded="true" aria-controls="collapseFourth"></div>
                     </h2>
                 </div>
-                <div id="collapseFourth" class="collapse" aria-labelledby="headingFourth" data-parent="#accordionExample">
+                <div id="collapseFourth" class="collapse multi-collapse" aria-labelledby="headingFourth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -695,7 +695,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseFifth" aria-expanded="true" aria-controls="collapseFifth"></div>
                     </h2>
                 </div>
-                <div id="collapseFifth" class="collapse" aria-labelledby="headingFifth" data-parent="#accordionExample">
+                <div id="collapseFifth" class="collapse multi-collapse" aria-labelledby="headingFifth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -717,7 +717,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseSixth" aria-expanded="true" aria-controls="collapseSixth"></div>
                     </h2>
                 </div>
-                <div id="collapseSixth" class="collapse" aria-labelledby="headingSixth" data-parent="#accordionExample">
+                <div id="collapseSixth" class="collapse multi-collapse" aria-labelledby="headingSixth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -738,7 +738,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseSeventh" aria-expanded="true" aria-controls="collapseSeventh"></div>
                     </h2>
                 </div>
-                <div id="collapseSeventh" class="collapse" aria-labelledby="headingSeventh" data-parent="#accordionExample">
+                <div id="collapseSeventh" class="collapse multi-collapse" aria-labelledby="headingSeventh" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -769,7 +769,7 @@
                         <div class="specification__title-arrow" data-toggle="collapse" data-target="#collapseEighth" aria-expanded="true" aria-controls="collapseEighth"></div>
                     </h2>
                 </div>
-                <div id="collapseEighth" class="collapse" aria-labelledby="headingEighth" data-parent="#accordionExample">
+                <div id="collapseEighth" class="collapse multi-collapse" aria-labelledby="headingEighth" data-parent="#accordionExample">
                     <div class="card-body">
                         <table class="specification__list">
                             <tr>
@@ -790,7 +790,7 @@
     </div>
 </section>
 
-<section id="rusmelt2" class="rusmelt">
+<section id="rusmelt2" class="rusmelt rusmelt_darker">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-7 offset-lg-1">
@@ -894,6 +894,22 @@
         </div>
     </div>
 </footer>
+
+<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+    <form action="" class="popup-form">
+        <p class="popup-form-title">
+            Направьте Ваш запрос
+        </p>
+        <input type="text" placeholder="ФИО*" name="name">
+        <input type="text" placeholder="E-mail" name="email">
+        <input type="number" placeholder="Телефон" name="phone">
+        <textarea name="comment" id="" cols="30" rows="10" placeholder="Комментарий"></textarea>
+        <label for="select-file" class="label-for-file">прикрепить файл</label>
+        <input type="file" name="file" id="select-file">
+        <button class="main-button blue-article change-width-button">Отправить запрос</button>
+    </form>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
