--- a/app/related_equipment.html
+++ b/app/related_equipment.html
@@ -92,53 +92,80 @@
 
 <section class="printers-after-header__section">
     <div class="container">
-        <h2 class="site-h2__section-divider">Металлическая проволока</h2>
+        <h2 class="site-h2__section-divider">Сопутствующее оборудование</h2>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
-                        <p class="printers-after-header__section__item__inner_title">Титан</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <p class="printers-after-header__section__item__inner_title">Пылесос промышленный (гидросепаратор) для сбора остатков порошка</p>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
-                        <p class="printers-after-header__section__item__inner_title">Инконель</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <p class="printers-after-header__section__item__inner_title">Бокс перчаточный с инертной средой для пересыпки порошканконель</p>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
-                        <p class="printers-after-header__section__item__inner_title">Алюминий</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <p class="printers-after-header__section__item__inner_title">Оборудование пробоподготовки</p>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
-                        <p class="printers-after-header__section__item__inner_title">Нержавеющая сталь</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <p class="printers-after-header__section__item__inner_title">3Д-сканеры - средства оптического измерения</p>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
-                        <p class="printers-after-header__section__item__inner_title">Нержавеющая сталь</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <p class="printers-after-header__section__item__inner_title">Установка просева порошков</p>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
-                        <p class="printers-after-header__section__item__inner_title">Нержавеющая сталь</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <p class="printers-after-header__section__item__inner_title">Установка пескоструйная</p>
+                        <a href="#" class="main-button white h51">перейти</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
+                <div class="printers-after-header__item-container">
+                    <div class="printers-after-header__section__item__inner">
+                        <p class="printers-after-header__section__item__inner_title">Обрабатывающий центр для постобработки изделий после 3D-печати</p>
+                        <a href="#" class="main-button white h51">перейти</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
+                <div class="printers-after-header__item-container">
+                    <div class="printers-after-header__section__item__inner">
+                        <p class="printers-after-header__section__item__inner_title">Печь вакуумная</p>
+                        <a href="#" class="main-button white h51">перейти</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
+                <div class="printers-after-header__item-container">
+                    <div class="printers-after-header__section__item__inner">
+                        <p class="printers-after-header__section__item__inner_title">Отрезной станок эрозионной резки</p>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -180,7 +207,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
@@ -207,7 +234,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -247,7 +274,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -277,7 +304,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -307,7 +334,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -339,7 +366,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 <section class="metal_powders-__section metal_powders-text-styles">
@@ -371,7 +398,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
@@ -403,7 +430,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Запросить стоимость </a>
+        <a href="#" class="main-button blue-article change-width-button">Запросить стоимость </a>
     </div>
 </section>
 
@@ -466,6 +493,22 @@
         </div>
     </div>
 </footer>
+
+<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+    <form action="" class="popup-form">
+        <p class="popup-form-title">
+            Направьте Ваш запрос
+        </p>
+        <input type="text" placeholder="ФИО*" name="name">
+        <input type="text" placeholder="E-mail" name="email">
+        <input type="number" placeholder="Телефон" name="phone">
+        <textarea name="comment" id="" cols="30" rows="10" placeholder="Комментарий"></textarea>
+        <label for="select-file" class="label-for-file">прикрепить файл</label>
+        <input type="file" name="file" id="select-file">
+        <button class="main-button blue-article change-width-button">Отправить запрос</button>
+    </form>
+</div>
 
 
 <script src="js/scripts.min.js"></script>
