--- a/app/metal_powders.html
+++ b/app/metal_powders.html
@@ -92,13 +92,13 @@
 
 <section class="printers-after-header__section">
     <div class="container">
-        <h2 class="site-h2__section-divider">Металлические SLM-принтеры</h2>
+        <h2 class="site-h2__section-divider">Металлические порошки</h2>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Титан</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Инконель</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Алюминий</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Нержавеющая сталь</p>
-                        <a href="#" class="main-button white">перейти</a>
+                        <a href="#" class="main-button white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -301,6 +301,22 @@
         </div>
     </div>
 </footer>
+
+<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+    <form action="" class="popup-form">
+        <p class="popup-form-title">
+            Направьте Ваш запрос
+        </p>
+        <input type="text" placeholder="ФИО*" name="name">
+        <input type="text" placeholder="E-mail" name="email">
+        <input type="number" placeholder="Телефон" name="phone">
+        <textarea name="comment" id="" cols="30" rows="10" placeholder="Комментарий"></textarea>
+        <label for="select-file" class="label-for-file">прикрепить файл</label>
+        <input type="file" name="file" id="select-file">
+        <button class="main-button blue-article change-width-button">Отправить запрос</button>
+    </form>
+</div>
 
 
 <script src="js/scripts.min.js"></script>
