--- a/app/services.html
+++ b/app/services.html
@@ -94,7 +94,7 @@
                     <div class="overlay overlay-gray"></div>
                     <p class="product-item__name">3D-печать</p>
                     <p class="product-item__descr">Мы предлагаем услуги 3D-печати высшего качества по всем современным стандартам и технологиям.</p>
-                    <a href="#" class="main-button white">Подробнее</a>
+                    <a href="#" class="main-button white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".3s">
@@ -102,7 +102,7 @@
                     <div class="overlay overlay-coral"></div>
                     <p class="product-item__name">Оптимизация  деталей</p>
                     <p class="product-item__descr">Наши инженеры занимаются оптимизацией топологии деталей, которая заключается в снижении массы при обеспечении необходимого запаса прочности.</p>
-                    <a href="#" class="main-button white">Подробнее</a>
+                    <a href="#" class="main-button white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-6 wow fadeInUp animated" data-wow-delay=".6s">
@@ -110,7 +110,7 @@
                     <div class="overlay overlay-blue"></div>
                     <p class="product-item__name product-item__name--big">Аудит предприятий на предмет аддитивных технологий</p>
                     <p class="product-item__descr">Специалисты ООО «РусАТ» проведут комплексный анализ Вашего предприятия и проконсультируют по внедрению аддитивных технологий в технологический процесс производства.</p>
-                    <a href="#" class="main-button white">Подробнее</a>
+                    <a href="#" class="main-button white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-6 wow fadeInUp animated">
@@ -118,7 +118,7 @@
                     <div class="overlay overlay-strawberry"></div>
                     <p class="product-item__name product-item__name--big">3D-сканирование</p>
                     <p class="product-item__descr">Комплексные услуги профессионального 3D-сканирования и гарантия отличного результата.</p>
-                    <a href="#" class="main-button white">Подробнее</a>
+                    <a href="#" class="main-button white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".3s">
@@ -126,7 +126,7 @@
                     <div class="overlay overlay-gray"></div>
                     <p class="product-item__name">Тренинги</p>
                     <p class="product-item__descr">Наши курсы созданы для тех, кто собирается познать сферу аддитивного производства или усовершенствовать свои технические навыки.</p>
-                    <a href="#" class="main-button white">Подробнее</a>
+                    <a href="#" class="main-button white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".6s">
@@ -134,7 +134,7 @@
                     <div class="overlay overlay-coral"></div>
                     <p class="product-item__name">Реверс - инжиниринг</p>
                     <p class="product-item__descr">Вам требуется запасная часть, которая снята с производства или которую невозможно доставить в кратчайшие сроки? </p>
-                    <a href="#" class="main-button white">Подробнее</a>
+                    <a href="#" class="main-button white h51">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -191,8 +191,9 @@
     </div>
 
     <div class="metal_powders--btn services-2-btn-in-row">
-        <a href="#" class="main-button blue-article">Расчет стоимости 3D-печати</a>
-        <a href="#" class="main-button blue-article">Отправить заявку</a>
+        <a href="#" class="main-button blue-article  change-width-button">Расчет стоимости 3D-печати</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button popup-with-zoom-anim">Отправить заявку</a>
+
     </div>
 </section>
 
@@ -239,8 +240,8 @@
     </div>
 
     <div class="metal_powders--btn services-2-btn-in-row">
-        <a href="#" class="main-button blue-article">Купить 3D-сканер</a>
-        <a href="#" class="main-button blue-article">Заявка на 3D-сканирование</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Купить 3D-сканер</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Заявка на 3D-сканирование</a>
     </div>
 </section>
 
@@ -262,7 +263,7 @@
         </div>
     </div>
     <div class="metal_powders--btn ">
-        <a href="#" class="main-button blue-article">Заявка на реверс-инжиниринг</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Заявка на реверс-инжиниринг</a>
     </div>
 </section>
 
@@ -284,7 +285,7 @@
         </div>
     </div>
     <div class="metal_powders--btn ">
-        <a href="#" class="main-button blue-article">Заявка на оптимизацию детали</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Заявка на оптимизацию детали</a>
     </div>
 </section>
 
@@ -323,7 +324,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Заявка на оптимизацию детали</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Заявка на оптимизацию детали</a>
     </div>
 </section>
 
@@ -364,7 +365,7 @@
     </div>
 
     <div class="metal_powders--btn">
-        <a href="#" class="main-button blue-article">Записаться на курс</a>
+        <a href="#small-dialog" class="main-button blue-article change-width-button">Записаться на курс</a>
     </div>
 </section>
 
@@ -434,6 +435,21 @@
     </div>
 </footer>
 
+<!-- dialog itself, mfp-hide class is required to make dialog hidden -->
+<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+    <form action="" class="popup-form">
+        <p class="popup-form-title">
+            Направьте Ваш запрос
+        </p>
+        <input type="text" placeholder="ФИО*" name="name">
+        <input type="text" placeholder="E-mail" name="email">
+        <input type="number" placeholder="Телефон" name="phone">
+        <textarea name="comment" id="" cols="30" rows="10" placeholder="Комментарий"></textarea>
+        <label for="select-file" class="label-for-file">прикрепить файл</label>
+        <input type="file" name="file" id="select-file">
+        <button class="main-button blue-article change-width-button">Отправить запрос</button>
+    </form>
+</div>
 
 
 <script src="js/scripts.min.js"></script>
