--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,12 @@
     </div>
 </header>
 <section class="main-page__section-after-header section" >
-
+    <div id="video-bg">
+        <video autoplay muted loop id="myVideo">
+            <source src="img/rusat.mp4" type="video/mp4"
+            poster="img/main_page-bg.jpg">
+        </video>
+    </div>
     <div class="main-page__section-after-header__logo-container">
         <a href="#"><img src="img/logo.svg" alt="" class="i-re"></a>
         <a href="#"><img src="img/tvel.svg" alt="" class="i-re"></a>
